--- a/css/media.scss
+++ b/css/media.scss
@@ -62,6 +62,11 @@
         width: 100%; 
     }
     // ---sliming---end--here---
+    // ----Organic----Page-----//    
+    .Organic_Wrapper .Main-Filler-content .Filler-Treatment .Filler-content figure img {
+        max-width: 62%;
+    }
+    // ----Organic----end--here----
 }
 
 @media only screen  and(max-width:1300px){
@@ -111,7 +116,12 @@
     .wtsapp-sticky-wrp a .my-float {
         font-size: 35px;
     }
-     
+    //  HAIR----transplant--page--
+    .Slimming_Wrapper .Slimming-Banner {
+        height: 559px;
+        width: 100%;
+    }
+    // -----end---here----//
 }
 @media only screen  and(max-width:1200px){
     main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::before {
@@ -465,7 +475,91 @@
     .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-heading h4{
         font-size: 1.1em;
     }
+    
     // ---end--here-----sliming---//
+
+    // ------ hair--transplant--page---
+    .Prp_Wrapper .Prp-Banner .Banner_Content .Banner_child {
+        width: 77% !important;
+    }
+    .Prp_Wrapper .Main-Prp-content .Prp_wrp .Benefit-heading h2 {
+         font-size: 1.70em;
+    }
+    .Filler_Wrapper .Main-Filler-content .Filler-Treatment .filler-heading h2 {
+        font-size: 1.70em;
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .Hair-Bfr-content .lft figure:nth-child(1) img {
+        max-width: 86% !important;
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .Hair-Bfr-content .hair-cnt01 figure img {
+        max-width: 78% !important;
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .Hair-Bfr-content .lft figure:nth-child(1) {
+        -webkit-transform: translateX(73px);
+        transform: translateX(12px);
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .Hair-Bfr-content .hair-cnt01 figure.grl-aftr {
+        -webkit-transform: translate(-109px, 0px);
+        transform: translate(-109px, -46px);
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .Hair-Bfr-content .hair-cnt01 figure.grl-bfor {
+        top: -226px;
+        right: 111px;
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .Hair-Bfr-content{
+        padding: 4rem 0 1rem;
+    }   
+    // ------end---here----hair---transplant---//
+
+    // ---Fillers-----page----
+    .Filler_Wrapper .Slimming-Banner .Banner_Content{
+        padding: 2rem 0 0;
+    }
+    .Filler_Wrapper .Filler-Banner {
+        background-position-y: -134px!important;
+    }
+    .Filler_Wrapper .Main-Filler-content .Benefit_Wrapper .Benefit-heading h2 {
+        font-size: 1.6em; 
+    }
+    .Filler_Wrapper .Main-Filler-content .Benefit_Wrapper .Benefit-content p {
+        padding: 0 0 1rem;
+        font-size: 15px; ;
+        line-height: 1.6; 
+    }
+    .Filler_Wrapper .Main-Filler-content .Filler-Treatment .filler-heading h2 {
+        padding: 0 0 .4rem;
+    }
+    .Filler_Wrapper .Main-Filler-content .Filler-Treatment .Filler-content figure img {
+        max-width: 54%;
+    }
+    // -----end-----fillers---page----//
+
+    // -----Thread----page------// 
+    .Thread_Wrapper .Filler-Banner {
+        background-position-y: 0!important;
+    }
+    // ------End---here------Thread-------//
+     // -----Organic----page------// 
+     .Organic_Wrapper .Filler-Banner {
+        background-position-y: 0!important;
+    }
+    .Organic_Wrapper .Slimming-Banner .Banner_Content .Banner_child h1 {
+        font-size: 3.5em;
+    }
+    .Organic_Wrapper .Org_wrp .Organic-Cnt ul li {
+        padding: 0 0 .7rem 1.6rem;
+        font-size: 1em; 
+    }
+    .Organic_Wrapper .Org_wrp .Organic-Cnt ul li::before {
+        width: 8px;
+        height: 8px; 
+        top: 10px;
+        left: 5px;
+    }
+    .Organic_Wrapper .Org_wrp .Organic-Cnt ul {
+        padding: 0.5rem 0;
+    }
+    // ------End---here-----Organic--------//
 }
 
 @media  only screen  and (max-width:992px){
@@ -552,7 +646,7 @@
         text-shadow: 1px 1px 5px #00000057;
     }
     .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child p {
-      padding: 0.5rem 4rem .5em 0;  
+      padding: 0.5rem 4rem .5em 0!important;  
       font-size: 15px; 
       line-height: 1.7; 
    } 
@@ -607,6 +701,28 @@
         font-size: 15px!important;
     }
     // --end---here----
+
+    //----filller---page------//
+ 
+    .Filler_Wrapper .Main-Filler-content .Benefit_Wrapper .Benefit-heading h2 {
+        font-size: 1.4em;
+    }
+    .Filler_Wrapper .Main-content-Wrapper .Slim_Service .Slim_content p {
+        padding: 0 0 1rem; 
+    }
+    .Filler_Wrapper .Main-Filler-content .Benefit_Wrapper .Benefit-content p {
+        padding: 0 0 .5rem; 
+    }
+    .Filler_Wrapper .Main-Filler-content .Filler-Treatment .filler-heading h2 {
+        padding: 1rem 0 .4rem;
+    }
+    .Filler_Wrapper .Main-Filler-content .Filler-Service .Slim_content h2 {
+        padding: 0 0 1rem;
+        font-size: 1.4em; 
+    }
+    
+    // ---end---here--Filler----
+
 }
 
 @media only screen and(max-width:767px){
@@ -616,6 +732,12 @@
         .L_cmn01{
          width: 100%;
         }
+    }
+    header .top-social-bar { 
+        display: $none; 
+    }
+    header .Nav-wrp { 
+        padding: .5rem 0 .2rem; 
     }
     header .top-social-bar .child-wrp .L1{
         justify-content: $around!important;
@@ -847,6 +969,101 @@
         font-size: 33px;
     }
     // ---end---here-----//
+
+    // ---Hair---Transplant---page-----//
+    .HairTransplant_Wrapper .Slimming-Banner .Banner_Content .Banner_child {
+        width: 100% !important;
+    }
+    .HairTransplant_Wrapper .Slimming-Banner .Banner_Content {
+        padding: 2rem 0 0;
+    }
+    .Prp_Wrapper .Main-Prp-content .Prp_wrp .Benefit-heading h2 {
+        font-size: 1.50em;
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .hair-trn-Cnt01 p {
+        text-align: left !important;
+        padding: 0px 15rem 0 0;
+        line-height: 1.7;
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .Hair-Bfr-content .hair-cnt01 figure.grl-bfor {
+        top: -175px;
+        right: 56px;
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .Hair-Bfr-content .hair-cnt01 figure.grl-aftr {
+        transform: translate(-55px, -46px);
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .hair-trn-Cnt01 p {
+        font-size: 15px;
+    }
+    // ----end---here-----
+    // ----Filler----Page----
+    .Filler_Wrapper .Filler-Banner {
+        background-position-y: -110px !important;
+    }  
+    .Filler_Wrapper .Main-Filler-content .Benefit_Wrapper .Benefit-heading h2 {
+        font-size: 1.3em;
+        padding: .9rem 0 .9rem;
+        font-family: 'AlegreyaRegular';
+    }
+    .Filler_Wrapper .Main-content-Wrapper .Slim_Service .Slim_content {
+        padding: 0rem 0 0rem;
+    }
+    .Filler_Wrapper .Main-Filler-content .Filler-Treatment .filler-heading h2 {
+        padding: .5rem 0 .4rem;
+        font-size: 1.4em;
+    }
+    .Filler_Wrapper .Main-content-Wrapper .Slim_Service .Slim_content p {
+        padding: 0 0 .6rem;
+    }
+    .Filler_Wrapper .Main-Filler-content .Filler-Treatment .Filler-content figure img {
+        max-width: 64%;
+    }
+    // ---end---here-----Filllers----
+      // -----Thread----page------// 
+      .Thread_Wrapper .Filler-Banner {
+        background-position-y: 0!important;
+    }
+    // ------End---here------Thread-------//
+        // -----Organic----page------// 
+        .Organic_Wrapper .Filler-Banner {
+            background-position-y: 0!important;
+        }
+        .Organic_Wrapper .Org_wrp .Organic-Cnt ul li {
+            br{
+                display: none!important;
+            }
+        }
+        // ------End---here-----Organic--------//
+    //    -----Cosmo----page----
+    .Cosmo_Wrapper .Slimming-Banner .Banner_Content .Banner_child {
+        width: 71% !important;
+    }
+    // ------end--here---cosmo----
+    // -----HAirLaser-----page-----
+    .HairLaser-Wrapper .hairLaser_wrp .hair-Laser01 .subhair-trt-wrp{
+        justify-content: $mid;
+        text-align: $mid;
+    }
+    .HairLaser-Wrapper .hairLaser_wrp .hair-Laser01 .subhair-trt-wrp .hair_trt-cmn01 > figure img {
+         display: none;
+    }
+    .HairLaser-Wrapper .hairLaser_wrp .hair-Laser01 .subhair-trt-wrp .hair-Rgt {
+        text-align: $mid!important;
+    }
+    .HairLaser-Wrapper .hairLaser_wrp .hair-Laser01 .subhair-trt-wrp .hair_trt-cmn01 {
+        width: 100%;
+    }
+    .HairLaser-Wrapper .hairLaser_wrp .hair-Laser01 .subhair-trt-wrp .hair_trt-cmn01 .hair-cnt04 {
+        padding: 0rem 0 1rem;
+    }
+    .HairLaser-Wrapper .hairLaser_wrp .hair-Laser01 .subhair-trt-wrp .hair_trt-cmn01 h2{
+        font-size: 1.6em;
+        padding: 0 0 0rem;
+    }
+    .HairLaser-Wrapper .hairLaser_wrp .hair-Laser01 .subhair-trt-wrp .hair_trt-cmn01 .hair-cnt04 figure img {
+        animation: imganime 3s linear infinite;
+    }
+    // ------hair--Laser---end---hair---
 }
 
 @media only screen and (max-width: 576px){
@@ -1111,7 +1328,7 @@
         text-shadow: 1px 1px 2px #00000057;
     }
     .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child p {
-        padding: 0.5rem 4rem .5em 0;
+        padding: 0.5rem 4rem .5em 0!important;
         font-size: 14px;
         line-height: 1.7;
     }
@@ -1190,6 +1407,106 @@
         font-size: 14px!important; 
     }
     //------end--here---//
+    // ------Hair----transplant-----//
+    .HairTransplant_Wrapper  .Slimming-Banner .Banner_Content .Banner_child {
+        width: 100% !important;
+    }
+    .HairTransplant_Wrapper  .Slimming-Banner .Banner_Content {
+        padding: 1rem 0 0;
+    }
+    .HairTransplant_Wrapper .Slimming-Banner .Banner_Content .Banner_child .breadcrumb {
+        padding: 0rem 0 0;
+    } 
+    .Prp_Wrapper .Main-Prp-content .Prp_wrp .Benefit-heading h2 {
+        font-size: 1.3em;
+    }
+    .Filler_Wrapper .Main-Filler-content .Filler-Treatment .filler-heading h2 {
+        font-size: 1.3em;
+        padding: 0 0 0rem;
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .hair-trn-Cnt01 p {
+         padding: 0px 7rem 0 0; 
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .Hair-Bfr-content .hair-cnt01 figure img {
+        max-width: 100% !important;
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .Hair-Bfr-content .hair-cnt01 figure.grl-bfor {
+        top: -134px;
+        right: 2px;
+    } 
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .Hair-Bfr-content .lft figure:nth-child(1) img {
+        max-width: 100% !important;
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .Hair-Bfr-content .hair-cnt01 figure img {
+        max-width: 90% !important;
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .Hair-Bfr-content .hair-cnt01 figure.grl-aftr {
+       transform: translate(-26px, -37px);
+    }
+    .Thread_Wrapper .Thread-Treatment {
+        padding: 0rem 0 0;
+    }
+    .HairTransplant_Wrapper .Main-content-Wrapper .Slim_Service .Slim_content p {
+        padding: 0 0 .5rem; 
+    }
+    .Filler_Wrapper .Main-Filler-content .Benefit_Wrapper .Benefit-content p {
+        padding: 0 0 1.3rem;
+        font-size: 15px; 
+    }
+    // ----end---here---hair---transplant----
+    .Filler_Wrapper .Main-content-Wrapper .Slim_Service .Slim_content p {
+        padding: 0 0 .5rem; 
+    } 
+    // -----Filllers----page-----
+    .Filler_Wrapper .Filler-Banner {
+        background-position-y: -79px!important;
+    }   
+    .Filler_Wrapper .Main-Filler-content .Filler-Service .Slim_content h2 {
+        padding: 0 0 .5rem;
+        font-size: 1.3em;
+    } 
+    .Filler_Wrapper .Main-Filler-content .Benefit_Wrapper .Benefit-heading h2 {
+        font-size: 1.2em;
+        padding: 0 0 0.2rem;
+    }
+    .Filler_Wrapper .Main-Filler-content .Benefit_Wrapper .Benefit-content p {
+        padding: 0 0 .5rem;
+        font-size: 14px;
+    } 
+    // -----end---here---Fillers----page
+
+    // -----Thread----page------// 
+      .Thread_Wrapper .Filler-Banner {
+        background-position-y: 0!important;
+     }
+    .Thread_Wrapper .Thread-Treatment .Thread-cnt01 figure img {
+        max-width: 100% !important;
+    }
+    // ------End---here------Thread-------//
+        // -----Organic----page------// 
+     .Organic_Wrapper .Filler-Banner {
+        background-position-y: 0!important;
+    }
+    .Organic_Wrapper .Org_wrp .Organic-Cnt ul li {
+        padding: 0 0 .7rem 1.6rem;
+        font-size: 15px;
+    }   
+    // ------End---here-----Organic--------//
+    // ----Cosmo===page---
+       
+    .Cosmo_Wrapper .Slimming-Banner .Banner_Content .Banner_child {
+        width: 76% !important;
+    }
+    .Thread_Wrapper .Thread-left-wrp .key-wrp .key01 h3 {
+        font-size: 1em; 
+        padding: .6rem 0 .6rem;  
+    }
+    .Cosmo_Wrapper .Main-Filler-content .Benefit_Wrapper .Benefit-heading h2 {
+        font-size: 1.2em;
+        padding: 0 0 0.2rem;
+        text-align: center!important;
+    }
+    // ----End--here---Cosmo----
 }
 
 @media only screen and (max-width:480px){
@@ -1364,7 +1681,7 @@
         padding: 1rem 0 0;
     }
     .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child p {
-        padding: 0.5rem 4rem .5em 0;
+        padding: 0.5rem 4rem .5em 0!important;
         font-size: 13px;
         line-height: 1.7;
     }
@@ -1381,6 +1698,7 @@
         padding: 0 0 .5rem;
         font-size: 14px;
         line-height: 1.6;
+        word-spacing: 1px;
     }
     .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-right h3 {
         font-size: 1.04em;
@@ -1408,6 +1726,92 @@
         bottom: -63px;
     }
     // sliming---end----here---//
+
+    // ------hair----transplant----//
+    .Prp_Wrapper .Prp-Banner .Banner_Content .Banner_child p {
+        padding: .5rem 8rem .5rem 0 !important;
+    }  
+    .Prp_Wrapper .Main-Prp-content .Prp_wrp .Benefit-heading h2 {
+        font-size: 1.2em;
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .Hair-Bfr-content {
+        padding: 2rem 0 1rem;
+    }
+    .Filler_Wrapper .Main-Filler-content .Benefit_Wrapper .Benefit-content p {
+        padding: 0 0 1rem;
+        font-size: 14px; 
+    }
+    // ---end----here------//
+    // -----Fillerss----Pagee-----
+    .Filler_Wrapper .Filler-Banner {
+        background-position-y: -60px !important;
+    }
+    .Filler_Wrapper .Main-Filler-content .Filler-Service .Slim_content h2 {
+        padding: 0 0 .5rem;
+        font-size: 1.2em;
+    }
+    .Filler_Wrapper .Main-Filler-content .Benefit_Wrapper .Benefit-heading h2 {
+        font-size: 1.2em;
+        text-align: center!important;
+    }
+    .Filler_Wrapper .Main-Filler-content .Benefit_Wrapper .Benefit-content p {
+        padding: 0 0 .5rem;
+        font-size: 14px;
+    }
+    .Filler_Wrapper .Main-Filler-content .Filler-Treatment .Filler-content figure img {
+        max-width: 80%;
+    }    
+    // ----Fillers----end---here---
+        // -----Thread----page------// 
+        .Thread_Wrapper .Filler-Banner {
+            background-position-y: 0!important;
+         }
+        .Thread_Wrapper .Thread-Treatment .Thread-cnt01 figure img {
+            max-width: 100% !important;
+        }
+        .Thread_Wrapper .Thread-left-wrp .key-wrp .key01 h3 {
+            font-size: 1em; 
+            padding: 0 0 .5rem;  
+        }
+        // ------End---here------Thread-------//
+       // -----Organic----page------// 
+     .Organic_Wrapper .Filler-Banner {
+        background-position-y: 0!important;
+    }
+    // ------End---here-----Organic--------//
+    // Microderma---page-----
+
+    .MicroDerma_Wrapper .MicroDerma-Banner .Banner_Content .Banner_child p {
+        padding: .5rem 1rem .5rem 0 !important;
+    } 
+    .MicroDerma_Wrapper .Main-Filler-content .Benefit_Wrapper .Benefit-heading h2 {
+        font-size: 1.2em;
+        text-align: center!important;
+    } 
+    // ----end---here---microderma-----//
+    // ---body---Treatment--wrp
+    .Organic_Wrapper .Org_wrp .Organic-Cnt ul li::before {
+        width: 7px;
+        height: 7px; 
+    }
+    // ------Body---Treatement--end--here--
+    // ---Cosmo------Page----
+    .Cosmo_Wrapper .Prp-Banner .Banner_Content .Banner_child p {
+        padding: .5rem 3rem .5rem 0 !important;
+    }
+    // --------Cosmo--page----end--here---
+    // ----Hair----Laser------page------
+    .HairLaser-Wrapper .hairLaser_wrp .hair-Laser01 .subhair-trt-wrp .hair_trt-cmn01 h2 {
+        font-size: 1.5em;
+        padding: 0 0 0rem;
+    }
+    // -----Hair---End------Laser-----page---------here---------//
+    
+   // ----Hair----Pigment------page------
+   .HairPigment_Wrapper .Prp-Banner .Banner_Content .Banner_child p {
+      padding: .5rem 1rem .5rem 0 !important;
+    }
+    // -----Hair---End------Pigment-----page---------here---------//
 }
 
 @media only screen and(max-width:375px){
@@ -1669,4 +2073,75 @@
         font-size: 14px!important;
     }
     // ---end---here---
+    // ----Hair----Trnasplant-----//
+    .Prp_Wrapper .Prp-Banner .Banner_Content .Banner_child p {
+        padding: .5rem 2rem .2rem 0 !important;
+    }
+    .HairTransplant_Wrapper .Hair-transplant .Banner_child h4 {
+         font-size: 1em; 
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Slim_Service .slim-heading h2 {
+        font-size: 1em;
+    }
+    .Prp_Wrapper .Main-Prp-content .Prp_wrp .Benefit-heading h2 {
+        font-size: 1em;
+    }
+    .Filler_Wrapper .Main-Filler-content .Benefit_Wrapper .Benefit-content p {
+        padding: 0 0 .4rem; 
+    }
+    .Thread_Wrapper .Thread-left-wrp .key-wrp .key01 h3 {
+        font-size: 1em; 
+        padding: 0 0 .4rem; 
+    }
+    .Filler_Wrapper .Main-Filler-content .Filler-Treatment .filler-heading h2 {
+        font-size: 1em; 
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .hair-trn-Cnt01 p {
+        padding: 0px 1rem 0 0;
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .Hair-Bfr-content .hair-cnt01 figure img {
+        max-width: 87% !important;
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .Hair-Bfr-content .hair-cnt01 figure.grl-aftr {
+        transform: translate(-26px, 0px);
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .Hair-Bfr-content .hair-cnt01 figure.grl-bfor {
+        top: -44px;
+        right: -3px;
+    }
+    .HairTransplant_Wrapper .Hair-Trt-Bfr .Hair-Bfr-content .lft figure:nth-child(1) {
+         transform: translateX(0px);
+    }
+    // -----end----here--hair---Trasplant----
+    // fillers-----page----------
+    .Filler_Wrapper .Filler-Banner {
+        background-position-y: -37px !important;
+    }
+    .Filler_Wrapper .Main-Filler-content .Filler-Service .Slim_content h2 {
+         font-size: 1em;
+    }
+    .Filler_Wrapper .Main-Filler-content .Benefit_Wrapper .Benefit-heading h2 {
+        font-size: 1em;
+    }
+    
+    // ------Filllers----page----end--here---
+
+
+    // -----Thread----page------// 
+      .Thread_Wrapper .Filler-Banner {
+        background-position-y: 0!important;
+     } 
+    // ------End---here------Thread-------//
+     
+    // -----Organic----page------// 
+    .Organic_Wrapper .Filler-Banner {
+       background-position-y: 0!important;
+    }
+    // ------End---here-----Organic--------//
+       // ----Hair----Laser------page------
+       .HairLaser-Wrapper .hairLaser_wrp .hair-Laser01 .subhair-trt-wrp .hair_trt-cmn01 h2 {
+        font-size: 1.3em;
+    }
+    // -----Hair---End------Laser-----page---------here---------//
+   
 }
